<resources>
    <string name="app_name">FIBR</string>
    <string name="let_s_begin">Let\'s Begin</string>
    <string name="welcome">Welcome</string>
    <string name="welcomemsg">Hi there!</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an Account? <b>Sign Up!</b></string>
</resources>